<resources>
    <string name="app_name">Scorekeeper</string>

    <!-- Label for EditText in Edit Name Activity [CHAR LIMIT=30] -->
    <string name="player_name_label">Player Name</string>

    <!-- Separator between Label and EditText in Edit Name Activity [CHAR LIMIT=10] -->
    <string name="player_name_label_separator" translatable="false">:</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_player_name">Name</string>

    <!-- Number hint for score field in the Edit Score Activity[CHAR LIMIT=30] -->
    <string name="hint_player_score" translatable="false">0</string>

    <!-- Label for main activity menu option to delete all players [CHAR LIMIT=20] -->
    <string name="action_delete_all_players">Delete All Players</string>

    <!-- Label for main activity menu option to reset all scores[CHAR LIMIT=20] -->
    <string name="action_reset_scores">Reset Scores</string>

    <!-- Label for editor menu option to save player and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the selected player [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for editor overflow menu option that deletes the selected player [CHAR LIMIT=20] -->
    <string name="action_edit">Edit</string>

    <!-- Label for player icon in main activity list view[CHAR LIMIT=20] -->
    <string name="image_player_icon">Player Icon</string>

    <!-- Label for group icon in main activity list view empty view[CHAR LIMIT=20] -->
    <string name="image_group_icon">Group Icon</string>

    <!-- Default name for name field in the list view if name String is empty [CHAR LIMIT=30] -->
    <string name="main_default_name">Player</string>

    <!-- Title for the activity to add a score to a player [CHAR LIMIT=20] -->
    <string name="editor_activity_title_add_score">Add score</string>

    <!-- Title for the activity to edit a player's name [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_name">Edit Name</string>

    <!-- Toast message when user enters a score that is too large [CHAR LIMIT=30] -->
    <string name="large_number_error_toast">Error: score is too large</string>

    <!-- Label of current score on edit score activity [CHAR LIMIT=30] -->
    <string name="edit_player_current_score">Current score</string>

    <!-- Label of quick plus button [CHAR LIMIT=5] -->
    <string name="quick_plus_button" translatable="false">+</string>

    <!-- Label of quick minus button [CHAR LIMIT=5] -->
    <string name="quick_minus_button" translatable="false">-</string>

    <!--Donation page-->
    <string name="action_donate">Donate to Developer</string>
    <string name="donate_title">Donate</string>
    <string name="donate_greeting">Hello!</string>
    <string name="donate_message">My name is Amanda. If you are enjoying this app I developed,
        please consider purchasing my donation app.\n\nThe donation app does not do anything,
        but your donation will show me that my time spent developing free, no-ads apps is appreciated. Thanks!</string>
    <string name="play_store_direct_link_blue" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_browser_link_blue" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_direct_link_red" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_browser_link_red" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_direct_link_black" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="play_store_browser_link_black" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="Small">Small</string>
    <string name="button_donate">Try it on Google Play</string>
    <string name="small_heart">small heart</string>
    <string name="medium_heart">medium heart</string>
    <string name="large_heart">large heart</string>
    <string name="action_upgrade">Upgrade</string>
    <string name="play_store_browser_link_upgrade" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.scorekeeperupgrade</string>
    <string name="play_store_direct_link_upgrade" translatable="false">market://details?id=com.amandafarrell.scorekeeperupgrade</string>

</resources>
