<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amandafarrell.www.scorekeeper.MainActivity">

    <item
        android:id="@+id/action_reset_scores"
        android:title="@string/action_reset_scores"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_players"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:icon="@drawable/icon_donate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_upgrade"
        android:title="@string/action_upgrade"
        app:showAsAction="ifRoom" />
</menu>