<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:text="@string/player_name_label"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:text="@string/player_name_label_separator"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_player_name"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorText" />

</LinearLayout>