<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of players -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/layout2">

        <ImageView
            android:id="@+id/player_image_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_player_icon"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:textAppearanceSmall"
            tools:text="John Jacob Jingler" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/minus_button"
            style="@style/QuickButtons"
            android:text="@string/quick_minus_button" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:maxWidth="56dp"
            android:minWidth="56dp"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="123456" />

        <Button
            android:id="@+id/plus_button"
            style="@style/QuickButtons"
            android:text="@string/quick_plus_button" />

    </LinearLayout>
</RelativeLayout>